# ctpToMstoch

./: CMakeLists.txt  README.md  ctpdata.cpp  ctpdata.hpp  ctpgame.cpp  ctpgame.hpp  kernel.cpp  kernel.hpp  main.cpp  rangen.cpp  rangen.h  strategy.cpp  strategy.hpp
results/EDFig2/: plotrmsdcontourl4.R  plotrmsdcontourl6.R
results/EDFig3/: ctperrorLall.txt  ctplevelsperbeta.txt  ctplevelspereps.txt  ctpstepsexpl6.txt  plotLevelsperbeta.R  plotLevelspereps.R  plotlevcontour.R
results/EDFig4/: ctpbeliefsLall.txt  ctpdecperKLall.txt  ctplevelsLall.txt  ctpmbperKLall.txt  plotdecisions.R  plotlevels.R  plotmisbeliefs.R
results/EDFig5/: belieftransB03.R  belieftransB3.R  ctpbeliefsB03.txt  ctpbeliefsB3.txt  ctpedgesB03.txt  ctpedgesB3.txt  ctplevelsB03.txt  ctplevelsB3.txt  ctpltransitbeliefsB03.txt  ctpltransitbeliefsB3.txt  ctpnodesB03.txt  ctpnodesB3.txt  ctptransitlevelsB03.txt  ctptransitlevelsB3.txt  invgraphL4B03.R  invgraphL4B3.R  leveltransB03.R  leveltransB3.R
results/EDFig6/: ctpbeliefsLall125.txt  ctpbeliefsLall250.txt  ctpbeliefsLall500.txt  ctpldecperKLall125.txt  ctpldecperKLall250.txt  ctpldecperKLall500.txt  ctplevelsLall125.txt  ctplevelsLall250.txt  ctplevelsLall500.txt  ctpmbperKLall125.txt  ctpmbperKLall250.txt  ctpmbperKLall500.txt  plotbeliefs.R  plotdecisions.R
results/EDFig7/: ctpbeliefsC0001.txt  ctpbeliefsC001.txt  ctpdecperKC0001.txt  ctpdecperKC001.txt  ctplevelsC0001.txt  ctplevelsC001.txt  ctpmbperKC0001.txt  ctpmbperKC001.txt  plotmisbeliefs.R
results/EDFig9/: ctpbeliefsS001.txt  ctpbeliefsS01.txt  ctpbeliefsS10.txt  plotbeliefs.R  (+9 more)
(+121 files in other folders)
